--- a/views/sync.html
+++ b/views/sync.html
@@ -1,4 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
+<script src="/javascripts/page.js"></script>
 <div class="container">
     <p></p>
     <form class="form-inline">
@@ -9,9 +10,60 @@
             <input class="btn btn-default" type="button" value="配置产品数据源"  data-toggle="modal" data-target="#setting" onclick="setting('product')">
         </div>
         <div class="form-group">
-            <input class="btn btn-success" type="button" value="同步"  data-toggle="modal" id="sync-btn">
+            <input class="btn btn-success" type="button" value="同步全部"  data-toggle="modal" id="sync-btn">
         </div>
     </form>
+    <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><a href="#audit" data-toggle="tab">审核</a></li>
+        <li role="presentation"><a href="#sync" data-toggle="tab">同步</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane fade in active" id="audit">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <td>名称</td>
+                    <td>Logo</td>
+                    <td>英文名</td>
+                    <td>地点</td>
+                    <td>时间</td>
+                    <td>状态</td>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody id="list"></tbody>
+            </table>
+            <div class="text-right">
+                <nav>
+                    <ul class="pagination" id="pagination">
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="sync">
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <td>名称</td>
+                    <td>Logo</td>
+                    <td>英文名</td>
+                    <td>地点</td>
+                    <td>时间</td>
+                    <td>状态</td>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody id="list2"></tbody>
+            </table>
+            <div class="text-right">
+                <nav>
+                    <ul class="pagination" id="pagination2">
+
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 </div>
 <div class="modal fade" id="setting" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
@@ -47,7 +99,93 @@
         </div>
     </div><!-- /.modal-content -->
 </div><!-- /.modal -->
+<div class="modal fade" style="width: auto" id="audit-modal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" style="width: 300px">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close"
+                        data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title">
+                    审核
+                </h4>
+            </div>
+            <div class="modal-body">
+                <button type="button" class="btn btn-danger" id="audit-success-btn">
+                    通过
+                </button>
+                <button type="button" class="btn btn-primary" id="audit-fail-btn">
+                    失败
+                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    关闭
+                </button>
+            </div>
+        </div>
+    </div><!-- /.modal-content -->
+</div><!-- /.modal -->
 </html>
+<script id="list-template" type="text/x-handlebars-template">
+    {{#each data.list}}
+    <tr id="{{_id}}">
+        <td id="chnName{{_id}}"><a href="{{website}}">{{chnName}}</a></td>
+        <td id="logo{{_id}}">
+            {{#if logo}}
+            <div class="col-xs-6 col-md-6">
+                <a href="#" class="thumbnail">
+                    <img src="/user_data/{{logo}}">
+                </a>
+            </div>
+            {{/if}}
+        </td>
+        <td id="engName{{_id}}">{{engName}}</td>
+        <td id="position{{_id}}">{{position}}</td>
+        <td id="time{{_id}}">{{time}}</td>
+        <td id="status{{_id}}">
+            {{#compare status 0}}
+            未审核
+            {{/compare}}
+            {{#compare status 2}}
+            审核失败
+            {{/compare}}
+        </td>
+        <td>
+            <a onclick="audit('{{_id}}')" title="审核"><span class="glyphicon glyphicon-stats" data-toggle="modal" data-target="#audit-modal"/></a>&nbsp;&nbsp;&nbsp;&nbsp;
+        </td>
+    </tr>
+    {{/each}}
+</script>
+<script id="list-template2" type="text/x-handlebars-template">
+    {{#each data.list}}
+    <tr id="{{_id}}">
+        <td id="chnName{{_id}}"><a href="{{website}}">{{chnName}}</a></td>
+        <td id="logo{{_id}}">
+            {{#if logo}}
+            <div class="col-xs-6 col-md-6">
+                <a href="#" class="thumbnail">
+                    <img src="/user_data/{{logo}}">
+                </a>
+            </div>
+            {{/if}}
+        </td>
+        <td id="engName{{_id}}">{{engName}}</td>
+        <td id="position{{_id}}">{{position}}</td>
+        <td id="time{{_id}}">{{time}}</td>
+        <td id="status{{_id}}">
+            {{#compare status 1}}
+            审核通过
+            {{/compare}}
+            {{#compare status 3}}
+            已同步
+            {{/compare}}
+        </td>
+        <td>
+            <a onclick="syncOne('{{_id}}','{{chnName}}')" title="同步"><span class="glyphicon glyphicon-floppy-open"/></a>
+        </td>
+    </tr>
+    {{/each}}
+</script>
 <script>
     $('#save-btn').on('click',function(){
         var url='/setting/datasource';
@@ -101,5 +239,85 @@
                     alert(JSON.stringify(data));
             }
         })
+    }
+    loadPage(1)
+    var isaudit=false;
+    function loadPage(pageNo){
+        if(pageNo){
+            currPage=pageNo;
+        }
+        var param={
+            page:pageNo,
+            limit:10
+        }
+        if(isaudit){
+            param.status=[1,3];
+        }else{
+            param.status=[0,2];
+        }
+        $.ajax({
+            type : "GET",
+            url : "/fair/find",
+            data:param,
+            success: function(data) {
+                var obj = data;
+                if(obj.status=="200"){
+                    if(isaudit){
+                        $('#list2').handlebars($('#list-template2'), obj);
+                        page(obj.data.count,'loadPage','#pagination2')
+                    }else{
+                        $('#list').handlebars($('#list-template'), obj);
+                        page(obj.data.count,'loadPage','#pagination')
+                    }
+                }else{
+                    alert('加载失败。')
+                }
+            }
+        });
+    }
+    $('.nav-tabs a').click(function (e) {
+        $(this).tab('show')
+        if($(this).attr('href')=='#sync'){
+            isaudit=true;
+            loadPage(1)
+        }else{
+            isaudit=false
+            loadPage(1)
+        }
+    })
+    var audit_curr_fairId;
+    function audit(id){
+        audit_curr_fairId=id;
+    }
+    $('#audit-modal').on('hide', function() {
+        audit_curr_fairId=null;
+    });
+    $('#audit-success-btn').on('click', function() {
+        $.get("/fair/audit",
+                {
+                    _id:audit_curr_fairId,
+                    status: 1
+                }, function(result){
+                    $('#status'+audit_curr_fairId).html('审核通过')
+                    $("#audit-modal").modal("hide")
+                    $('#'+audit_curr_fairId).remove()
+                });
+    });
+    $('#audit-fail-btn').on('click', function() {
+        $.get("/fair/audit",
+                {
+                    _id:audit_curr_fairId,
+                    status: 2
+                }, function(result){
+                    $('#status'+audit_curr_fairId).html('审核失败')
+                    $("#audit-modal").modal("hide")
+                });
+    });
+    function syncOne(id,name){
+        if(confirm("是否同步 【"+name+"】?")){
+            $.get("/syncOne",{id:id}, function(result){
+                loadPage(1)
+            });
+        }
     }
 </script>
